// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > review > countReviews > successful 1`] = `
[
  {
    "responses": {
      "$size": 0,
    },
  },
]
`;

exports[`services > review > countReviews > successful 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > findReviewsByActive > active 1`] = `
[
  {
    "responses": {
      "$size": 0,
    },
  },
]
`;

exports[`services > review > findReviewsByActive > active 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > findReviewsByActive > active reviews for a specific model 1`] = `
[
  {
    "modelId": "modelId",
    "responses": {
      "$size": 0,
    },
  },
]
`;

exports[`services > review > findReviewsByActive > active reviews for a specific model 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > findReviewsByActive > inactive reviews for a specific model 1`] = `
[
  {
    "modelId": "modelId",
    "responses": {
      "$not": {
        "$size": 0,
      },
    },
  },
]
`;

exports[`services > review > findReviewsByActive > inactive reviews for a specific model 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;

exports[`services > review > findReviewsByActive > not active 1`] = `
[
  {
    "responses": {
      "$not": {
        "$size": 0,
      },
    },
  },
]
`;

exports[`services > review > findReviewsByActive > not active 2`] = `
[
  {
    "$expr": {
      "$gt": [
        {
          "$size": {
            "$filter": {
              "as": "item",
              "cond": {
                "$and": [
                  {
                    "$in": [
                      "$$item.entity",
                      [
                        "user:test",
                      ],
                    ],
                  },
                  {
                    "$in": [
                      "$role",
                      "$$item.roles",
                    ],
                  },
                ],
              },
              "input": "$model.collaborators",
            },
          },
        },
        0,
      ],
    },
  },
]
`;
